# racket-embed

./: CMakeLists.txt  README.org
scripts/: build_racket.sh  compatibility.patch  install_racket_peg.sh  racket-peg.patch  racket-v8.10.patch  racket.patch  raco_cleanup.sh
src/: CMakeLists.txt  rkt_bind_version.h  version.cpp
src/app/: CMakeLists.txt  demo.cpp  demo_config.scm  pid_config.toml  racket_cmd.cpp  test.scm  test.toml
src/bind/: bindings-syntax.scm  bindings.h  bindings.inc  bindings.scm  bindings_racket.cpp  racket_base.c  racket_base.h
src/bind/demo_common/: bindings.rkt  common.rkt  infix.rkt  infix_compiler.rkt  info.rkt  main.rkt  toml.rkt  toml_compiler.rkt
src/bind/demo_common/nc/: infix-syntax.rkt  toml-syntax.rkt
src/test/: CMakeLists.txt
